# UR5_gym

./: .gitignore  README.md  requirements.txt  setup.cfg
src/gym_ur5/: __init__.py
src/gym_ur5/models/: cartpole.py  cube.py  redpoint.py  table.py  ur5.py
src/gym_ur5/models/robots/: __init__.py  ur5_rg2.py
src/gym_ur5/randomizers/: __init__.py  cartpole_no_rand.py  ur5_rg2_no_rand.py  ur5_rg2_pick_and_place_no_rand.py
src/gym_ur5/tasks/: __init__.py  cartpole_discrete_balancing.py  pick_and_place.py  reach.py  reach_dict.py
tests/: FetchPickAndPlaceExample.py  FetchPickAndPlaceExample_train.py  FetchPickAndPlace_evaluate.py  FetchReachExample.py  FetchReachExample_hardcoded.py  FetchReachExample_train.py  UR5PickAndPlace_evaluate.py  UR5PickAndPlace_train_modSaving.py  UR5PickAndPlace_train_mod_Saving.py  helpers.py  main.py  models.py  self_evaluate.py  test1.py  test1_evaluate.py  test1_hardcoded.py  test1_train.py  test2.py  test2_hardcoded.py  test2_train.py  test3.py  test3_hardcoded.py  test3_self_evaluate.py  test3_train.py  test3_train_HER.py  train_FetchReachExample.py
tests/Training/Logs/DDPG_UR5Reach50k/: events.out.tfevents.1652787191.robo.28153.0
tests/Training/Logs/SAC_UR5Reach50k/: events.out.tfevents.1652783630.robo.23565.0
tests/Training/Logs/SAC_random_point/: events.out.tfevents.1654185999.EdvardsZ.5306.0  events.out.tfevents.1654188390.EdvardsZ.5306.1  events.out.tfevents.1654191728.EdvardsZ.5306.2  (+27 more)
tests/ur5_rg2/: model.config  model_without_arm_collision.sdf  test.sdf  ur5_rg2.sdf  ur5_rg2.urdf
(+41 files in other folders)
