[metadata]
name = example-package-EdvardsZ
version = 0.0.1
author = Edvards Zakovskis
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EdvardsZ/UR5_gym
project_urls =
    Bug Tracker = https://github.com/EdvardsZ/UR5_gym/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src